--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adit Joshi</title>
     <link rel="stylesheet" href="styles/site.css">
-    <script src="scripts/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
     <script src="scripts/site.js"></script>
     
 </head>
